create mvn build process for jar packaging